--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<h1> <%= name %> </h1>
+<h1> My Name is <%= name %>! </h1>
 <br/>
-<p>Does is work?</p>
+<p>Does it work?</p>
 </html>
